<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".circularroutescalculateofchargeloadsoft.CircularRoutesCalculateOfChargeLoadSoftActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include
            android:id="@+id/incHeader"
            layout="@layout/header" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/boru_ic_cap_input">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_boru_ic_cap"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number|numberDecimal"
                    android:maxLines="1"


                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/aci_degeri_input">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_aci"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number|numberDecimal"
                    android:maxLines="1"


                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/kivrim_yaricap">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_kivrim_yaricap"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number|numberDecimal"
                    android:maxLines="1"


                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/akiskan_hizi_input">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_akiskan_hizi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number|numberDecimal"
                    android:maxLines="1"


                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/yercekimi_ivmesi">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_yercekimi_ivmesi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number|numberDecimal"
                    android:maxLines="1"


                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:insetTop="0dp"
                android:insetLeft="0dp"
                android:insetRight="0dp"
                android:insetBottom="0dp"
                android:layout_marginTop="16dp"
                android:textAllCaps="false"
                android:text="@string/calculate"
                android:id="@+id/btn_hesapla"
                android:stateListAnimator="@null"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="24sp"
                android:textColor="#323232"
                android:layout_gravity="center"
                android:gravity="center"
                android:textStyle="bold"
                android:id="@+id/txt_sonuc"
                />


        </LinearLayout>



    </LinearLayout>

</ScrollView>
